dark mode fix

--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@ Description: Customized Twenty Twenty-One theme. Twenty Twenty-One is a blank ca
 Requires at least: 5.3
 Tested up to: 5.8
 Requires PHP: 5.6
-Version: 2.2.2
+Version: 2.2.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: twentytwentyone
@@ -23,6 +23,8 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
 :root {
     --global--color-dark-gray: #151d22;
     --heading--font-family: "HK Grotesk", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    --button--border-radius: 4rem;
+    --form--border-radius: 3px;
 }
 
 
@@ -51,7 +53,11 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
     animation: none;
 }
 
-.is-dark-theme.is-dark-theme {
+.is-light-theme {
+    @extend .light;
+}
+
+.is-dark-theme {
     @extend .dark;
 }
 
@@ -59,4 +65,8 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
     .alignwide {
         max-width: 74rem;
     }
+}
+
+select {
+    border-radius: var(--form--border-radius);
 }
